--- a/package.json
+++ b/package.json
@@ -1,21 +1,133 @@
 {
+  
+  "type": "module",
+  
   "name": "instituto",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "start:ngrok": "node ngrok.mjs",
+  
+    
+  "start:next": "next dev --turbopack",
+  
+    
+  "dev": "npm run start:next & npm run start:ngrok",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint"
+  
   },
+  
   "dependencies": {
-    "@prisma/client": "^6.1.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "next": "15.1.3",
-    "pg": "^8.13.1",
-    "prisma": "^6.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+  
+    
+  "@chakra-ui/icons": "^2.2.4",
+  
+    
+  "@chakra-ui/next-js": "^2.4.2",
+  
+    
+  "@chakra-ui/react": "^2.8.1",
+  
+    
+  "@emotion/react": "^11.14.0",
+  
+    
+  "@emotion/styled": "^11.14.0",
+  
+    
+  "@googleapis/calendar": "^9.7.9",
+  
+    
+  "@mercadopago/sdk-js": "^0.0.3",
+  
+    
+  "@prisma/client": "^6.1.0",
+  
+    
+  "axios": "^1.7.9",
+  
+    
+  "bcrypt": "^5.1.1",
+  
+    
+  "bcryptjs": "^2.4.3",
+  
+    
+  "dotenv": "^16.4.7",
+  
+    
+  "framer-motion": "^11.15.0",
+  
+    
+  "geist": "^1.3.1",
+  
+    
+  "jsonwebtoken": "^9.0.2",
+  
+    
+  "lodash": "^4.17.21",
+  
+    
+  "mercadopago": "^2.4.0",
+  
+    
+  "next": "^15.1.3",
+  
+    
+  "next-auth": "^4.24.11",
+  
+    
+  "next-themes": "^0.4.4",
+  
+    
+  "ngrok": "^5.0.0-beta.2",
+  
+    
+  "nodemailer": "^6.10.0",
+  
+    
+  "pg": "^8.13.1",
+  
+    
+  "prisma": "^6.1.0",
+  
+    
+  "react": "^19.0.0",
+  
+    
+  "react-dom": "^19.0.0",
+  
+    
+  "react-images-uploading": "^3.1.7",
+  
+    
+  "react-qr-code": "^2.0.15"
+  
+  },
+  
+  "devDependencies": {
+  
+    
+  "@types/node": "22.10.5",
+  
+    
+  "@types/react": "19.0.3",
+  
+    
+  "typescript": "5.7.2"
+  
   }
 }
