--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dev": "next dev",
   
     
-  "build": "next build",
+ "build": "prisma generate && next build",
   
     
   "start": "next start",
